<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">科技视界</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="menu_array">
        <item>首页</item>
        <item>发现</item>
        <item>我的</item>
        <item>浏览记录</item>
        <item>关于我们</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hot">最热</string>
    <string name="newest">最新</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="no_network_connection">网络未连接</string>
    <string name="server_connection_failure">服务器连接失败，请重试</string>
    <!-- ################### BrowserActivity ################# -->
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="page_not_found"><html><body>哎呀！页面跑飞了</body></html></string>
    <string name="network_connection_failure"><html><body>貌似网断了</body></html></string>
    <!-- ################## DiscoveryFragment ################# -->
    <string name="start_search">开始搜索</string>
    <string name="search_title">搜索</string>
    <string name="search_hint">输入新闻标题、关键字</string>
    <string name="search_result"> 的搜索结果：</string>
    <!-- ################## LoginFragment ################# -->
    <string name="progress_login">正在登录&#8230;</string>
    <string name="progress_register">正在注册&#8230;</string>
    <string name="prompt_name">用户名</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_newname">新用户名</string>
    <string name="prompt_newemail">新邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_newpassword">新密码</string>
    <string name="prompt_newpassword2">再次输入新密码</string>
    <string name="action_login">登录</string>
    <string name="action_login_color"><u><font color="red">登录</font></u></string>
    <string name="action_logout">退出登录</string>
    <string name="action_register">注册</string>
    <string name="action_register_color"><u><font color="blue">注册</font></u></string>
    <string name="volunteer_color"><u><font color="blue">志愿者</font></u></string>
    <string name="action_apply_volunteer_color"><font color="blue">是的，我要申请志愿者</font></string>
    <string name="action_login_register"><b>Login</b> or register</string>
    <string name="action_login_short">Login</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="error_invalid_email">非法的邮件地址</string>
    <string name="error_the_same_info">信息无改动</string>
    <string name="error_invalid_password">密码不少于4个字符</string>
    <string name="error_newpassword_not_match">两次输入不匹配</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_incorrect_name_password">用户名或密码错误</string>
    <string name="error_name_long">不超过32个字符</string>
    <string name="error_field_required">字段不能为空</string>
    <string name="cancel_authorization">正在取消&#8230;</string>
    <string name="failure_login">登录失败，请重试</string>
    <string name="failure_register">注册失败，请重试</string>
    <string name="failure_change">修改失败,请重试</string>
    <string name="user_not_exists">用户不存在，请先注册</string>
    <string name="user_no_autorizaiton">账号已锁定，请联系客服解锁</string>
    <string name="success_register">注册成功</string>
    <string name="success_login">登录成功</string>
    <string name="success_change">修改成功</string>
    <string name="user_name">用户：</string>
    <string name="user_email">邮箱：</string>
    <string name="action_changepassword">修改密码</string>
    <string name="action_changeinfo">修改用户信息</string>
    <string name="action_submit">确认提交</string>
    <string name="progress_submit">正在提交&#8230;</string>
    <string name="title_activity_volunteer_apply">VolunteerApplyActivity</string>
    <string name="you_can_help">您能帮助改善我们的新闻去重算法！</string>
    <string name="operation_instruction">0、勾选了上述志愿者申请，界面将会发生细微变化，然后您可按照以下说明进行操作：</string>
    <string name="first_step">1、选择您认为重复的两条新闻</string>
    <string name="second_step">2、确认提交</string>
    <string name="third_step">3、提交后对应新闻的标志数+1</string>
    <string name="fourth_step">4、点击以下按钮可以清除本地反馈记录同时所有标志数清零</string>
    <string name="expect_your_apply">期待您的热忱参与！</string>
    <string name="clear_submit_make_sure">确定清除反馈记录？</string>
    <!-- ################## NewsListFragment duplication submit ################# -->
    <string name="check_num">0</string>
    <string name="title_duplication_dialog">确认提交消重反馈？</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="dup_submit_cancel">提交已取消，请重新选取</string>
    <string name="failure_retry">失败，请重试</string>
    <string name="must_select_two_items">必须选择两项</string>
    <string name="submit_success">提交成功</string>
    <string name="user_not_login">登录已过期，请先登录</string>
    <string name="action_clearduplicate">清除消重反馈记录</string>
    <string name="success_clear">清除成功</string>
    <!-- ################## HistoryFragment duplication submit ################# -->
    <string name="action_clear_history">清除痕迹</string>
    <string name="clear_history_make_sure">确定清除历史记录？</string>
    <!-- ################## About us ################# -->
    <string name="chk_update">检测更新</string>
    <string name="contact_us">联系我们</string>
    <string name="author">作者：合肥海晨网络科技有限公司</string>
    <!-- ################## Update ################# -->
    <string name="update_new_version_find">发现新版本：\n</string>
    <string name="update_download">下载升级</string>
    <string name="update_nexttime">以后再说</string>
    <string name="update_ok">确定</string>
    <string name="update_cancel">取消</string>
    <string name="update_error_title">更新取消</string>
    <string name="update_stop_message">下载被终止</string>
    <string name="pref_about_long">应用名称：<b>%1$s</b>\n
        					版本号：<b>V%2$s</b></string>
    <string name="update_already_newews">已是最新版本</string>
    <string name="title_activity_contact">ContactActivity</string>
	<!-- ################## Contact ################# -->
	<string name="prompt_contact_email">您的联系邮箱</string>
	<string name="prompt_contact_feedback">您的意见或建议</string>
	<string name="submit">提交</string>
	<string name="failure_submit">提交失败，请重试</string>
	<string name="success_submit">反馈成功</string>
	<string name="exit_application">再按一次退出程序</string>
</resources>
