<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <CheckBox 
            android:layout_gravity="top|right"
		    android:id="@+id/check_volunteer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/action_apply_volunteer_color"/>
		<!-- android:button="@null"
	    	android:drawableRight="?android:attr/listChoiceIndicatorMultiple" -->
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="@dimen/textview_margin"
    	    android:paddingLeft="24dip"
    	    android:text="@string/you_can_help"/>
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="@dimen/textview_margin"
    	    android:text="@string/operation_instruction"/>
    	<ImageView 
    	    android:layout_width="180dip"
    	    android:layout_height="320dip"
    	    android:scaleType="fitCenter"
    	    android:layout_gravity="center"
    	    android:background="@drawable/dup_select"
    	    android:contentDescription="@string/first_step"/>
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="@dimen/textview_margin"
    	    android:text="@string/first_step"/>
    	<ImageView 
    	    android:layout_width="180dip"
    	    android:layout_height="320dip"
    	    android:scaleType="fitCenter"
    	    android:layout_gravity="center"
    	    android:background="@drawable/dup_submit"
    	    android:contentDescription="second_step"/>
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="@dimen/textview_margin"
    	    android:text="@string/second_step"/>
    	<ImageView 
    	    android:layout_width="180dip"
    	    android:layout_height="320dip"
    	    android:scaleType="fitCenter"
    	    android:layout_gravity="center"
    	    android:background="@drawable/dup_show"
    	    android:contentDescription="@string/third_step"/>
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="@dimen/textview_margin"
    	    android:text="@string/third_step"/>
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="@dimen/textview_margin"
    	    android:text="@string/fourth_step"/>
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_margin="@dimen/textview_margin"
    	    android:text="@string/expect_your_apply"/>
	    <Button 
		    android:id="@+id/btn_clearduplicate"
		    android:layout_gravity="center"
		    android:layout_marginLeft="30dip"
	        android:layout_marginRight="30dip"
	        android:layout_marginTop="10dip"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/action_clearduplicate"/>	    
    </LinearLayout>       
    </ScrollView>	