<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dip"
    android:gravity="center"
    android:orientation="vertical" >    
	<LinearLayout android:layout_width="match_parent"
	   android:layout_height="0dip"
	   android:layout_weight="3"
	   android:gravity="center"
	   android:orientation="vertical">
            <ImageView 
		   	    android:layout_width="64dip"
		   	    android:layout_height="64dip"
		   	    android:scaleType="fitCenter"
		   	    android:layout_gravity="center"
		   	    android:layout_marginBottom="10dip"
		   	    android:background="@drawable/ic_launcher"
		   	    android:contentDescription="@string/first_step"/>
			<TextView 
			    android:id="@+id/version_name"
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:gravity="center"
		   	    android:layout_margin="@dimen/textview_margin"
		   	    android:text="@string/app_name"/>
			<TextView 
		   	    android:layout_width="match_parent"
		   	    android:layout_height="wrap_content"
		   	    android:gravity="center"
		   	    android:layout_margin="@dimen/textview_margin"
		   	    android:text="@string/author"/>
			<Button 
			    android:id="@+id/btn_chk_update"
			    android:layout_gravity="center"
			    android:layout_marginLeft="30dip"
		        android:layout_marginRight="30dip"
		        android:layout_marginTop="10dip"
			    android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/chk_update"/>	  
		     <Button 
			    android:id="@+id/btn_contact_us"
			    android:layout_gravity="center"
			    android:layout_marginLeft="30dip"
		        android:layout_marginRight="30dip"
			    android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/contact_us"/>	  
        </LinearLayout>
   	<LinearLayout android:layout_width="match_parent"
   	    android:layout_height="0dip"
   	    android:layout_weight="1"
   	    android:orientation="vertical"/>
</LinearLayout>
