<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/changepassword_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/changepassword_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/progress_submit"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
	
    <!-- Login form -->
    <ScrollView
        android:id="@+id/changepassword_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >
			<EditText
                android:id="@+id/cppassword"
                style="@style/EditTextCustomHolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/newpassword"
                style="@style/EditTextCustomHolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_newpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
			<EditText
                android:id="@+id/newpassword2"
                style="@style/EditTextCustomHolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_newpassword2"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            <Button
                android:id="@+id/btn_cp_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_submit" />            
        </LinearLayout>
    </ScrollView>

</LinearLayout>
