<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/big_padding"
    android:paddingLeft="@dimen/big_padding"
    android:paddingRight="@dimen/big_padding"
    android:paddingTop="@dimen/big_padding"
    tools:context=".ContactActivity" >
	<EditText android:id="@+id/contact_email"
	    android:paddingLeft="6dip"
	    android:paddingRight="6dip"
	    android:paddingTop="3dip"
	    android:paddingBottom="3dip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textEmailAddress"
	    android:hint="@string/prompt_contact_email"
        android:maxLines="1"
        android:singleLine="true" 
        android:background="@drawable/textview_border"/>
	<EditText android:id="@+id/contact_feedback"
	    android:paddingLeft="6dip"
	    android:paddingRight="6dip"
	    android:paddingTop="3dip"
	    android:paddingBottom="3dip"
	    android:layout_margin="10dip"
	    android:layout_below="@id/contact_email"
	    android:layout_width="match_parent"
	    android:layout_height="140dip"
	    android:inputType="textMultiLine"
	    android:singleLine="false"
	    android:gravity="top"
	    android:scrollbars="vertical"
	    android:maxLines="5"
	    android:hint="@string/prompt_contact_feedback"
	    android:background="@drawable/textview_border"/>
	<Button 
	    android:id="@+id/btn_submit_contact"
	    android:layout_below="@id/contact_feedback"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/submit"
	    android:layout_centerHorizontal="true"/>
</RelativeLayout>
